--- a/static/css/view.css
+++ b/static/css/view.css
@@ -82,6 +82,21 @@
     height: 100%;
 }
 
+#story-back-btn {
+    display: none;
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+}
+
+#story-back-btn > img {
+    width: 100%;
+    height: 100%;
+}
+
 /* フッター */
 .video-footer {
     position: relative;
