--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -23,6 +23,7 @@
                 {% if user.is_authenticated %}
                     <li><a href="">{{ user.get_username }}様</a></li>
                     <li><a href="{% url 'main:logout' %}">Log out</a></li>
+                    <li><a href="{% url 'report:report' %}">レポート画面へ</a></li>
                 {% endif %}
             </ul>
         </nav>
