Chart.js title, ツールチップ変更, プロジェクトクリック時Chart変更

--- a/templates/report/report.html
+++ b/templates/report/report.html
@@ -61,6 +61,9 @@
             <div class="mix-chart">
                 <canvas id="main-chart"></canvas>
             </div>
+            {% comment %} <div class="video-action-chart">
+                <canvas id="main-chart"></canvas>
+            </div> {% endcomment %}
             <div class="pie-chart">
                 <div>
                     <canvas id="terminal-chart"></canvas>
@@ -69,6 +72,9 @@
                     <canvas id="browser-chart"></canvas>
                 </div>
             </div>
+        </div>
+        <div>
+        {% comment %} ユーザごとの分析レポート表示エリア {% endcomment %}
         </div>
     </div>
     <div class="project-list">
