--- a/templates/report/report.html
+++ b/templates/report/report.html
@@ -74,7 +74,16 @@
             </div>
         </div>
         <div>
-        {% comment %} ユーザごとの分析レポート表示エリア {% endcomment %}
+            <div id="analysis-grid">
+                <div class="analysis-title-row">
+                    <div></div>
+                    <div>動画</div>
+                    <div>アクセス時間</div>
+                    <div>離脱時間</div>
+                    <div>動画再生開始時間</div>
+                    <div>視聴時間</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="project-list">
